--- a/adm/style/acp_whovisitedthistopic.html
+++ b/adm/style/acp_whovisitedthistopic.html
@@ -94,7 +94,7 @@
 
 	<fieldset class="submit-buttons">
 		<legend>{{ lang('SUBMIT') }}</legend>
-		<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('submit') }}" />
+		<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />
 	</fieldset>
 
 	{{ S_FORM_TOKEN }}
